add aop, mapstruct, example collections of postman
